# SoniLiveText

./: .gitignore  Cargo.toml  LICENSE  README.md  build_error.txt  build_error_2.txt  config.toml.example  llm.md  soniox.toml.examples
.agent/rules/: project-desc.md
.github/instructions/: codacy.instructions.md
docs/API/Soniox Websocket/: soniox-websocket-docs-260103.md  websocket_transcription.md  websocket_translation.md
docs/egui/: egui_methods.md
src/: errors.rs  gui.rs  lib.rs  main.rs
src/gui/: app.rs  draw.rs  launcher.rs  text.rs  utils.rs
src/soniox/: mod.rs  modes.rs  request.rs  state.rs  stream.rs  transcribe_mode.rs  translate_mode.rs  validation.rs
src/types/: audio.rs  languages.rs  offset.rs  settings.rs  soniox.rs
src/windows/: audio.rs  utils.rs
