[package]
name = "sonilivetext"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/oregapam/SoniLiveText"
rust-version = "1.89.0"

[dependencies]
wasapi = "0.22.0"
thiserror = "2.0.16"
tungstenite = { version = "0.28.0", features = ["native-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
futures-util = "0.3.31"
eframe = { version = "0.33.2", features = ["glow"] }
windows = { version = "0.62.2", features = ["Win32_UI_WindowsAndMessaging"] }
raw-window-handle = "0.6.2"
log = "0.4.29"
config = "0.15.19"
log4rs = "1.4.0"
bytemuck = "1.24.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
hound = "3.5.1"

[profile.release]
lto = "fat"
strip = true
opt-level = 3
codegen-units = 32
panic = "abort"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
